Revision history for DBIx::Class

        - Fixed up related resultsets and multi-create
        - Fixed superfluous connection in ODBC::_rebless
        - Fixed undef PK for first insert in ODBC::Microsoft_SQL_Server
        - Added virtual method to Versioned so a user can create upgrade 
          path across multiple versions (jgoulah)
        - Better (and marginally faster) implementation of the HashRefInflator
          hash construction algorithm
        - Added the ability to instantiate HashRefInflator so options can be 
          passed to the constructor
        - Additional recursive function to optionally inflate any inflatable
          values in the hashref generated by HashRefInflator
        - Allow explicit specification of ON DELETE/ON UPDATE constraints
          when using the SQLT parser

0.08099_04 2008-07-24 01:00:00
        - Functionality to storage to enable a sub to be run without FK checks
        - Fixed $schema->clone bug which caused clone and source to share 
          internal hash refs
        - Added register_extra_source methods for additional sources
        - Added datetime_undef_if_invalid for InflateColumn::DateTime to
          return undef on invalid date/time values
        - Added search_related_rs method to ResultSet
        - add a make_column_dirty method to Row to force updates
        - throw a clear exception when user tries multi-has_many prefetch
        - SQLT parser prefixes index names with ${table}_idx_ to avoid clashes
        - mark ResultSetManager as deprecated and undocument it
        - pod fix (RT #32988)
        - add Test::Exception to test requirements (RT #34256)
        - make ash's build_requires/META.yml fixes work better
        - is_deferable support on relations used by the SQL::Translator
          parser
        - Refactored DBIx::Class::Schema::Versioned
        - Syntax errors from resultset components are now reported correctly
        - sqltargs respected correctly in deploy et al.